// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-details renders 1`] = `
<sc-dashboard-customer-details customer-id="asdf">
  <mock:shadow-root>
    <sc-customer-details edit-link="http://testing.stenciljs.com/?action=edit&amp;model=customer&amp;id=asdf" exportparts="base, heading, heading-text, heading-title, heading-description, error__base, error__icon, error__text, error__title, error__message, test-tag__base, test-tag__content, button__base, button__label, button__prefix"></sc-customer-details>
  </mock:shadow-root>
</sc-dashboard-customer-details>
`;

exports[`sc-customer-details renders empty if no customer id 1`] = `
<sc-dashboard-customer-details>
  <mock:shadow-root>
    <sc-customer-details edit-link="http://testing.stenciljs.com/?action=edit&amp;model=customer" exportparts="base, heading, heading-text, heading-title, heading-description, error__base, error__icon, error__text, error__title, error__message, test-tag__base, test-tag__content, button__base, button__label, button__prefix"></sc-customer-details>
  </mock:shadow-root>
</sc-dashboard-customer-details>
`;
